<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PRE-VENTAS</string>
    <string name="action_settings">Settings</string>
    <string name="produts">PRODUCTOS</string>
    <string name="stores">TIENDAS</string>
    <string name="transactions">TRANSACCIONES</string>
    <string name="synchronize">SINCRONIZAR</string>
    <string name="title_activity_products">PRODUCTOS</string>
    <string name="title_activity_stores">TIENDAS</string>
    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Iniciar Sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="title_activity_transactions">Transacciones recientes</string>
    <string name="title_activity_show_transaction">DETALLE DE TRANSACCIÓN</string>
    <string name="title_activity_new_transaction">NUEVA TRANSACCIÓN</string>
    <string name="settings">CONFIGURACIÓN</string>
    <string name="add_product">+ Producto</string>
    <string name="save">Guardar</string>
    <string name="title_activity_add_product">SELECCIONAR PRODUCTOS</string>
    <string name="title_activity_edit_detail">EDITAR DETALLE</string>

</resources>
